# thoughts

./: .clippy.toml  Cargo.toml  HACKING.md
.github/workflows/: ci.yml
src/: cli.rs  db.rs  embeddings.rs  lib.rs  main.rs  search.rs
src/commands/: list.rs  mod.rs  save.rs  search.rs
tests/: integration_test.rs
